--- a/_css/styles.css
+++ b/_css/styles.css
@@ -7,23 +7,27 @@
 
     --main-color: rgba(0,0,0,.6);
     --secondary-color: rgb(0 ,0 ,0);
-}
+} 
 
 main  {
     height: 90vh;
+    /*background-color: aquamarine;*/
 }
 
-header > div  {
-    padding: 1rem;
+#logo-header  {
+    height: 9vh;
+    padding: 0 1.5rem;
+    font-size: 20px;
     display: flex;
     justify-content: space-between;
-    font-size: 22px;
+    align-items: center;
+    background-color: #FFF;
 }
 
-header > div > div  {
+#logo-header > div  {
     color: red;
 }
-header > div > ion-icon  {
+#logo-header > a > ion-icon  {
     color: var(--tertiary-text);
 }
 
@@ -31,99 +35,96 @@ header > div > ion-icon  {
     margin-right: .5rem;
 }
 
-header > nav > ul  {
+#itens-header  {
+    height: 7.5vh;
     display: flex;
     align-items: center;
-    color: var(--secondary-text);
-    background-color: var(--secondary-color);
+    background-color: black;
 }
 
-header > nav > ul > div  {
+#itens-header > div:first-child  {
     display: flex;
     align-items: center;
-    height: 2.5rem;
-}
-
-header > nav > ul > div:first-child  {
+    height: 100%;
+    padding: 0 1rem;
     background-color: red;
 }
-
-nav > ul ion-icon  {
-    margin: 10px;
+#itens-header > div:last-child  {
+    display: flex;
+    gap: 1.5rem;
 }
 
-ul > div > li  {
-    margin-right: 10px;
+#itens-header > div:first-child > a  {
+    color: var(--secondary-text);
+}
+#itens-header > div:last-child > a  {
+    display: flex;
+    gap: .5rem;
+    color: var(--secondary-text);
 }
 
-#airplane  {
-    margin-left: 1.2rem;
+#hotel  {
+    margin-left: 1rem;
 }
 
-main > div > form#travel-form  {
+main > div#travel  {
+    height: 73.5vh;
+}
+
+div#travel  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form#travel-form  {
+    width: 95%;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-auto-rows: auto;
-    row-gap: .5rem;
-    margin: 4rem 5%;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, auto);
+    row-gap: .7rem;
 }
 
 form#travel-form > h1  {
-    grid-column: 1 / -1;
     color: var(--main-text);
     font-weight: 300;
 }
-form > p:nth-of-type(2)  {
-    grid-row-start: 4;
-}
-form #cmp1  {
-    grid-row-start: 3;
-    grid-column: 1 / -1;
-    padding: .7rem .4rem;
-}
-form #cmp2  {
-    grid-column: 1 / -1;
-    padding: .7rem .4rem;
-}
 
-input  {
-    letter-spacing: 1.5px;
+form#travel-form > input[type="text"]  {
+    padding: .7rem .5rem;
+    letter-spacing: 1.3px;
     font-size: 18px;
 }
 
-form > input[type="button"]  {
-    margin-top: .8rem;
+form#travel-form > input:last-of-type  {
     padding: .6rem 0;
-    color: var(--secondary-text);
+    width: 50%;
+    margin-top: .4rem;
     font-size: 18px;
+    color: var(--secondary-text);
     background-color: var(--main-color);
-    width: 210px;
     border: none;
 }
 
-
-/*Good Offers Right Now*/
-section  {
-    margin: 0 5%;
-    background-color: rgb(183, 181, 181);
+/*
+section.infos  {
+    padding: 4.5rem 2.5%;
+    background-color: rgba(230, 227, 227, 0.942);
 }
 
-#offers > div  {
+section.infos > div#offers > #cinqueterre {
+    background-image: url(../imagens/cinqueterre.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
     margin-bottom: 1rem;
 }
 
-#offers > div.imagens  {
-    height: 400px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: top bottom;
-}
-
-#offers > div#cinqueterre  {
-    background-image: url(../imagens/cinqueterre.jpg);
-
-}
-#offers > div#newyork  {
+section.infos > div#offers > #newyork  {
     background-image: url(../imagens/newyork.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 500px;
 }
-    
+*/
