--- a/_css/styles.css
+++ b/_css/styles.css
@@ -27,6 +27,10 @@ main  {
 #logo-header > div  {
     color: red;
 }
+#logo-header > div > span  {
+    font-size: 24px;
+}
+
 #logo-header > a > ion-icon  {
     color: var(--tertiary-text);
 }
@@ -63,6 +67,10 @@ main  {
     color: var(--secondary-text);
 }
 
+#airplane  {
+    margin-right: .5rem;
+}
+
 #hotel  {
     margin-left: 1rem;
 }
@@ -82,7 +90,7 @@ form#travel-form  {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, auto);
-    row-gap: .7rem;
+    row-gap: .8rem;
 }
 
 form#travel-form > h1  {
@@ -106,12 +114,145 @@ form#travel-form > input:last-of-type  {
     border: none;
 }
 
-/*
+
 section.infos  {
+    display: grid;
+    row-gap: 1.5rem;
     padding: 4.5rem 2.5%;
     background-color: rgba(230, 227, 227, 0.942);
 }
 
+section.infos > div#offers  {
+    width: 100%;
+    display: grid;
+    row-gap: 1.2rem;
+}
+
+section.infos .offers-explore, .travel-discount  {
+    font-weight: 400;
+    color: var(--main-text);
+}
+
+section.infos .travel-discount  {
+    font-size: 18px;
+}
+
+section.infos > div#offers > div.imagem  {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 350px;
+    display: grid;
+    justify-items: start;
+    align-items: end;
+    padding: 1.5rem;
+    font-size: 20px;
+    font-weight: 500;
+    color: var(--secondary-text);
+}
+
+section.infos > div#offers > div#cinqueterre  {
+    background-image: url(../imagens/cinqueterre.jpg);
+}
+section.infos > div#offers > div#newyork  {
+    background-image: url(../imagens/newyork.jpg);
+}
+section.infos > div#offers > div#sanfrancisco  {
+    background-image: url(../imagens/sanfran.jpg);
+}
+section.infos > div#offers > div#pisa  {
+    background-image: url(../imagens/pisa.jpg);
+}
+section.infos > div#offers > div#paris  {
+    background-image: url(../imagens/paris.jpg);
+}
+
+
+section.infos > div#explore  {
+    display: grid;
+    row-gap: 1.2rem;
+}
+
+section.infos > div#explore > div  {
+    background-color: var(--secondary-text);
+}
+
+section.infos > div#explore > div img  {
+    width: 100%;
+    height: 220px;
+}
+
+.about-place  {
+    display: flex;
+    flex-direction: column;
+    gap: 1.3rem;
+    padding: 1.5rem;
+    background-color: var(--secondary-text);
+}
+
+.about-place > h3  {
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.about-place > p:first-of-type  {
+    color: rgb(142, 139, 139);
+}
+
+.about-place > p:nth-of-type(2)  {
+    font-size: 18px;
+}
+
+.about-place > p:last-of-type  {
+    margin-left: 1rem;
+    font-size: 18px;
+}
+
+
+section.infos > div#get-offers  {
+    display: grid;
+    row-gap: 1rem;
+    padding: 1rem;
+    color: var(--secondary-text);
+    background-color: var(--main-color);
+}
+
+div#get-offers > h2  {
+    font-weight: 400;
+}
+
+div#get-offers > p  {
+    font-size: 19px;
+}
+
+div#get-offers > form > p:first-child  {
+    margin-bottom: 3px;
+    font-size: 19px;
+}
+
+#cmpEmail  {
+    margin-bottom: .8rem;
+    width: 100%;
+    padding: .8rem .5rem;
+    letter-spacing: 1.3px;
+    font-size: 18px;
+}
+
+div#get-offers > form > p > input[type="button"]  {
+    background-color: rgb(236, 114, 114);
+    border: none;
+    padding: 1rem;
+    font-size: 20px;
+    color: var(--secondary-text);
+}
+
+
+
+
+
+
+
+/*
 section.infos > div#offers > #cinqueterre {
     background-image: url(../imagens/cinqueterre.jpg);
     background-repeat: no-repeat;
