--- a/_css/styles.css
+++ b/_css/styles.css
@@ -118,7 +118,7 @@ form#travel-form > input:last-of-type  {
 section.infos  {
     display: grid;
     row-gap: 1.5rem;
-    padding: 4.5rem 2.5%;
+    padding: 4.5rem 2.5% 1.5rem 2.5%;
     background-color: rgba(230, 227, 227, 0.942);
 }
 
@@ -247,25 +247,92 @@ div#get-offers > form > p > input[type="button"]  {
 }
 
 
-
-
-
-
-
-/*
-section.infos > div#offers > #cinqueterre {
-    background-image: url(../imagens/cinqueterre.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 500px;
-    margin-bottom: 1rem;
+section.infos > div#contact  {
+    display: grid;
+    row-gap: 1rem;
 }
 
-section.infos > div#offers > #newyork  {
-    background-image: url(../imagens/newyork.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    height: 500px;
+div#contact > h2  {
+    font-weight: 100;
+    font-size: 27px;
+    color: var(--main-text);
 }
-*/
+
+div#contact > div > address, p  {
+    color: var(--tertiary-text);
+    font-weight: 100;
+}
+
+div#contact > div ion-icon  {
+    margin-right: .7rem;
+    color: black;
+}
+
+div#contact > form  {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+div#contact > form > input  {
+    padding: 1rem .6rem;
+    font-size: 18px;
+    letter-spacing: 1.3px;
+}
+
+div#contact > form > textarea  {
+    padding-top: .5rem;
+    padding-left: .6rem;
+    font-size: 18px;
+    letter-spacing: 1.3px;
+}
+
+div#contact > form > #cmpNome  {
+    width: 100%;
+}
+
+div#contact > input  {
+    padding: .6rem 1rem;
+    width: 8rem;
+    background-color: black;
+    text-transform: uppercase;
+    border: none;
+    color: var(--secondary-text);
+}
+
+
+footer  {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    background-color: rgba(230, 227, 227, 0.942);
+}
+
+footer > h2  {
+    font-size: 16px;
+    font-weight: 300;
+}
+
+footer > div#social-networks  {
+    margin: 1.5rem 0;
+}
+
+footer > h2  {
+    color: rgba(184, 181, 181, 0.918);
+}
+footer > p  {
+    color: rgba(184, 181, 181, 0.918);
+}
+footer > p:nth-of-type(1) > a  {
+    color: rgba(184, 181, 181, 0.918);
+}
+
+footer > p > a  {
+    text-decoration: underline;
+}
+
+footer > div > a  {
+    font-size: 20px;
+    margin: 0 .5rem;
+    color: var(--tertiary-text);
+}
