--- a/_css/styles.css
+++ b/_css/styles.css
@@ -9,6 +9,10 @@
     --secondary-color: rgb(0 ,0 ,0);
 } 
 
+body  {
+    background-color: rgba(230, 227, 227, 0.942);
+}
+
 main  {
     height: 90vh;
     /*background-color: aquamarine;*/
@@ -125,7 +129,6 @@ section.infos  {
     display: grid;
     row-gap: 1.5rem;
     padding: 4.5rem 2.5% 1.5rem 2.5%;
-    background-color: rgba(230, 227, 227, 0.942);
 }
 
 section.infos > div#offers  {
