--- a/_css/media.css
+++ b/_css/media.css
@@ -13,7 +13,7 @@
     }
 
     main > header > #logo-header  {
-        margin-bottom: 5rem;
+        margin-bottom: 10vh;
         justify-content: space-around;
     }
 
@@ -118,6 +118,10 @@
 }
 
 @media screen and (min-width: 1200px)  {
+    main > header > #logo-header  {
+        justify-content: space-between;
+    }
+
     #travel-form > input[type="button"]:hover  {
         color: var(--main-text);
         background-color: rgb(163, 162, 162);
@@ -134,6 +138,31 @@
 
     input:hover, textarea:hover  {
         background-color: rgb(248, 244, 244);
+    }
+
+    footer > #social-networks  {
+        padding: 8px;
+    }
+
+    footer > #social-networks > a:hover  {
+        font-size: 1.8rem;
+        transition: all .8s;
+    }
+
+    footer > #social-networks #face:hover  {
+        color: #3B5998;
+    }
+    footer > #social-networks #insta:hover  {
+        color: #E4405F;
+    }
+    footer > #social-networks #twitter:hover  {
+        color: #1DA1F2;
+    }
+    footer > #social-networks #whats:hover  {
+        color: #25D366;
+    }
+    footer > #social-networks #ldin:hover  {
+        color: #0077B5;
     }
 }
 
